Changed nav links

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
         </div>
         <nav class = "main navbar sticky-top navbar-light bg-light d-flex justify-content-between p-0 pr-2 rounded-bottom shadow">
             <ul class= "link-list">
-                <li><a class="" href="/">Home</a></li>
-                <li><a class="" href="/">Attorneys</a></li>
-                <li><a class="" href="/">About</a></li>
-                <li><a class="" href="/">Victims</a></li>
-                <li><a class="" href="/">Grants</a></li>
-                <li><a class="" href="/">Training</a></li>
+                <li><a class="" href="#">Home</a></li>
+                <li><a class="" href="#">Attorneys</a></li>
+                <li><a class="" href="#">About</a></li>
+                <li><a class="" href="#">Victims</a></li>
+                <li><a class="" href="#">Grants</a></li>
+                <li><a class="" href="#">Training</a></li>
             </ul>
             <form class="form-inline">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
